<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerNamesActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_names_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewPlayer1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1_label"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPlayer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_enter_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/textViewPlayer1Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewPlayer2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2_label"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPlayer1"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPlayer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_enter_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/textViewPlayer2Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_start_game"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPlayer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
